--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,22 @@ before_script:
   # Use Google's name servers. The default name servers cannot
   # resolve capybara1.elabs.se for unknown reasons.
   - sudo su -c 'echo "nameserver 8.8.8.8" > /etc/resolv.conf; echo "nameserver 8.8.4.4" >> /etc/resolv.conf'
-  - phantomjs --version
+  - host capybara2.elabs.se
+  - cat /etc/resolv.conf
+  # - phantomjs --version
 rvm:
   - 1.9.3
-  - 1.9.2
-  - 1.8.7
-  - rbx-18mode
-  - rbx-19mode
-  - jruby-18mode
-  - jruby-19mode
+  # - 1.9.2
+  # - 1.8.7
+  # - rbx-18mode
+  # - rbx-19mode
+  # - jruby-18mode
+  # - jruby-19mode
 gemfile:
-  - Gemfile
+  # - Gemfile
   - ci/Gemfile.capybara1-0
-  - ci/Gemfile.capybara1-1
-matrix:
-  allow_failures:
-    - rvm: rbx-18mode
-    - rvm: rbx-19mode
+  # - ci/Gemfile.capybara1-1
+# matrix:
+#   allow_failures:
+#     - rvm: rbx-18mode
+#     - rvm: rbx-19mode
